--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -2,7 +2,7 @@
   max-width: 1600px;
   min-height: 600px;
   margin: 0 auto;
-  background-color: var(--dark-background);
+  background-color: var(--dark-bg);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
