--- a/sass/utils/_backdrop.scss
+++ b/sass/utils/_backdrop.scss
@@ -2,7 +2,7 @@
   z-index: 15;
   width: 100vw;
   height: 100vh;
-  background-color: var(--backdrop-color);
+  background-color: var(--backdrop);
   position: fixed;
   top: 0;
   opacity: 1;
