--- a/sass/utils/_basic.scss
+++ b/sass/utils/_basic.scss
@@ -1,6 +1,6 @@
 body {
   font-family: var(--main-font);
-  color: var(--main-text);
+  color: var(--main-txt);
   background-color: var(--main-white);
   font-size: 14px;
   line-height: 1.71;
