--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -19,6 +19,6 @@
 }
 .project-caption {
   padding: 20px 24px;
-  border: 1px solid var(--border);
+  border: 1px solid var(--project-border);
   border-top: none;
 }
