--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -28,8 +28,8 @@
   line-height: 1.62;
   letter-spacing: 0.03em;
   padding: 6px 22px;
-  color: var(--secondary-text);
-  background-color: var(--light-background);
+  color: var(--secondary-txt);
+  background-color: var(--light-bg);
   box-shadow: none;
   transition: color var(--transition-duration) var(--transition-timing),
     background-color var(--transition-duration) var(--transition-timing),
