--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -14,7 +14,7 @@
   margin-right: 0;
 }
 .logo__accent {
-  color: var(--secondary-text);
+  color: var(--secondary-txt);
   .footer & {
     color: var(--main-white);
   }
