--- a/sass/components/_soc-list.scss
+++ b/sass/components/_soc-list.scss
@@ -6,7 +6,7 @@
   }
 }
 .network-links__icon {
-  fill: var(--main-icon-color);
+  fill: var(--icon);
   border-radius: 50%;
   width: 44px;
   height: 44px;
