--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -1,10 +1,5 @@
 .advantage__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  margin-bottom: 50px;
-  color: var(--secondary-text);
+  @extend %section-title;
 }
 .advantage__list {
   display: flex;
@@ -21,7 +16,7 @@
     display: block;
     height: 120px;
     border-radius: 4px;
-    background-color: var(--light-background);
+    background-color: var(--light-bg);
     background-size: 70px;
     background-repeat: no-repeat;
     background-position: center;
@@ -35,5 +30,5 @@
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 10px;
-  color: var(--secondary-text);
+  color: var(--secondary-txt);
 }
