--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,10 +1,5 @@
 .clients__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  margin-bottom: 50px;
-  color: var(--secondary-text);
+  @extend %section-title;
 }
 .clients__list {
   display: flex;
@@ -18,8 +13,8 @@
   height: 92px;
   @extend %flex-centered;
   border-radius: 4px;
-  border: 1px solid var(--main-icon-color);
-  color: var(--main-icon-color);
+  border: 1px solid var(--icon);
+  color: var(--icon);
   transition: border var(--transition-duration) var(--transition-timing),
     color var(--transition-duration) var(--transition-timing);
   &:hover,
