--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -5,3 +5,25 @@
     }
   }
 }
+@mixin mobile {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
+}
+@mixin retina {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    @content;
+  }
+}
