--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -3,6 +3,14 @@
   align-items: center;
   justify-content: center;
 }
+%section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+  color: var(--secondary-txt);
+}
 %basic-btn {
   font-family: var(--main-font);
   font-size: 16px;
@@ -22,6 +30,6 @@
     var(--transition-timing);
   &:hover,
   &:focus {
-    background-color: var(--secondary-accent);
+    background-color: var(--accented-accent);
   }
 }
