--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -2,6 +2,8 @@
   @extend %section-title;
   margin-bottom: 30px;
   @include desktop {
+    font-size: 36px;
+    line-height: 1.17;
     margin-bottom: 50px;
   }
 }
