--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -3,6 +3,10 @@
 }
 .team__title {
   @extend %section-title;
+  @include desktop {
+    font-size: 36px;
+    line-height: 1.17;
+  }
   margin-bottom: 30px;
   @include desktop {
     margin-bottom: 50px;
