--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -5,8 +5,8 @@
 }
 %section-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: calc(33 / 28);
   text-align: center;
   color: var(--secondary-txt);
 }
