--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -37,6 +37,7 @@
   }
 }
 .project-caption {
+  flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid var(--project-border);
   border-top: none;
