--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
   --transition-timing: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.agree-text, .client__link, .footer .network-links__icon, .about__desc, .footer__btn {
+.check-block, .agree-text, .client__link, .footer .network-links__icon, .about__desc, .footer__btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -164,6 +164,7 @@ img {
 }
 
 .project-caption {
+  flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid var(--project-border);
   border-top: none;
@@ -187,26 +188,21 @@ img {
   overflow: hidden;
   padding-right: var(--scrollbar-width);
 }
-.no-scroll header {
-  padding-right: var(--scrollbar-width);
-}
 
 .header {
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 10;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-color: var(--main-white);
   border-bottom: 1px solid var(--header-border);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -373,7 +369,7 @@ img {
   margin-bottom: auto;
 }
 
-.mob-menu__nav-item:not(:last-child) {
+.mob-menu__nav-item {
   margin-bottom: 32px;
 }
 
@@ -462,7 +458,7 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -39px;
+  bottom: -34px;
   width: 100%;
   height: 4px;
   border-radius: 2px;
@@ -470,7 +466,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .current::after {
-    bottom: -34px;
+    bottom: -33px;
   }
 }
 
@@ -980,7 +976,9 @@ img {
 }
 
 .project-link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow var(--transition-duration) var(--transition-timing);
 }
 .project-link:hover, .project-link:focus {
@@ -1193,6 +1191,7 @@ img {
   left: 50%;
   width: 95%;
   height: 95%;
+  overflow-y: auto;
   padding: 40px;
   font-size: 12px;
   line-height: 1.1666666667;
@@ -1340,43 +1339,37 @@ img {
   margin-bottom: 30px;
   color: var(--main-txt);
 }
-@media screen and (max-width: 479px) {
-  .agree-text {
-    font-size: 9px;
-  }
-}
 @media screen and (min-width: 1200px) {
   .agree-text {
     font-size: 14px;
     line-height: 1.71;
   }
 }
-.agree-text span {
+
+.check-block {
   margin-right: 7px;
   width: 16px;
   height: 15px;
   background-color: transparent;
-  border: 2px solid var(--secondary-txt);
+  border: 1.5px solid var(--secondary-txt);
   border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   transition: background-color var(--transition-duration) var(--transition-timing), border var(--transition-duration) var(--transition-timing);
 }
-.modal-check:checked + .agree-text span {
+.modal-check:checked + .agree-text .check-block {
   background-color: var(--accent);
-  border: none;
-}
-.agree-text a {
-  margin-left: 4px;
-  text-decoration: underline;
-  color: var(--accent);
+  border: 1.5px solid transparent;
 }
 
 .check-icon {
-  fill: var(--main-white);
+  fill: transparent;
   transition: fll var(--transition-duration) var(--transition-timing);
 }
 .modal-check:checked + .agree-text .check-icon {
   fill: var(--main-white);
+}
+
+.agreement {
+  font: inherit;
+  text-decoration: underline;
+  color: var(--accent);
 }/*# sourceMappingURL=main.css.map */
