--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,7 @@
   left: 50%;
   width: 95%;
   height: 95%;
+  overflow-y: auto;
   padding: 40px;
   font-size: 12px;
   line-height: calc(14 / 12);
@@ -132,9 +133,6 @@
 .agree-text {
   @extend %flex-centered;
   font-size: 12px;
-  @media screen and (max-width: 479px) {
-    font-size: 9px;
-  }
   line-height: calc(14 / 12);
   @include desktop {
     font-size: 14px;
@@ -142,34 +140,32 @@
   }
   margin-bottom: 30px;
   color: var(--main-txt);
-  span {
-    margin-right: 7px;
-    width: 16px;
-    height: 15px;
-    background-color: transparent;
-    border: 2px solid var(--secondary-txt);
-    border-radius: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color var(--transition-duration)
-        var(--transition-timing),
-      border var(--transition-duration) var(--transition-timing);
-    .modal-check:checked + & {
-      background-color: var(--accent);
-      border: none;
-    }
-  }
-  a {
-    margin-left: 4px;
-    text-decoration: underline;
-    color: var(--accent);
+}
+.check-block {
+  @extend %flex-centered;
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+  background-color: transparent;
+  border: 1.5px solid var(--secondary-txt);
+  border-radius: 2px;
+  transition: background-color var(--transition-duration)
+      var(--transition-timing),
+    border var(--transition-duration) var(--transition-timing);
+  .modal-check:checked + .agree-text & {
+    background-color: var(--accent);
+    border: 1.5px solid transparent;
   }
 }
 .check-icon {
-  fill: var(--main-white);
+  fill: transparent;
   transition: fll var(--transition-duration) var(--transition-timing);
   .modal-check:checked + .agree-text & {
     fill: var(--main-white);
   }
+}
+.agreement {
+  font: inherit;
+  text-decoration: underline;
+  color: var(--accent);
 }
