--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,15 +1,13 @@
 .header {
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 10;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   @include tablet {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
   @include desktop {
     padding-top: 24px;
